--- a/xolotl/xolotlCore/advection/CMakeLists.txt
+++ b/xolotl/xolotlCore/advection/CMakeLists.txt
@@ -16,6 +16,7 @@ file(GLOB SRC *.cpp)
 include_directories(${CMAKE_SOURCE_DIR}/xolotlCore)
 include_directories(${CMAKE_SOURCE_DIR}/xolotlCore/reactants)
 include_directories(${CMAKE_SOURCE_DIR}/xolotlCore/reactants/psiclusters)
+include_directories(${CMAKE_BINARY_DIR})
 
 #Add a library
 add_library(${LIBRARY_NAME} STATIC ${SRC})
