--- a/xolotl/xolotlCore/diffusion/CMakeLists.txt
+++ b/xolotl/xolotlCore/diffusion/CMakeLists.txt
@@ -17,6 +17,7 @@ include_directories(${CMAKE_SOURCE_DIR}/xolotlCore)
 include_directories(${CMAKE_SOURCE_DIR}/xolotlCore/advection)
 include_directories(${CMAKE_SOURCE_DIR}/xolotlCore/reactants)
 include_directories(${CMAKE_SOURCE_DIR}/xolotlCore/reactants/psiclusters)
+include_directories(${CMAKE_BINARY_DIR})
 
 #Add a library 
 add_library(${LIBRARY_NAME} STATIC ${SRC})
