--- a/xolotl/xolotlCore/flux/CMakeLists.txt
+++ b/xolotl/xolotlCore/flux/CMakeLists.txt
@@ -18,6 +18,7 @@ include_directories(${CMAKE_SOURCE_DIR}/xolotlCore/commandline)
 include_directories(${CMAKE_SOURCE_DIR}/xolotlCore/reactants)
 include_directories(${CMAKE_SOURCE_DIR}/xolotlCore/reactants/psiclusters)
 include_directories(${CMAKE_SOURCE_DIR}/xolotlPerf)
+include_directories(${CMAKE_BINARY_DIR})
 
 #Add the libraries
 add_library(${LIBRARY_NAME} STATIC ${SRC})
