--- a/xolotl/xolotlCore/modifiedreaction/CMakeLists.txt
+++ b/xolotl/xolotlCore/modifiedreaction/CMakeLists.txt
@@ -22,6 +22,7 @@ include_directories(${CMAKE_SOURCE_DIR}/xolotlCore/reactants/psiclusters)
 include_directories(${CMAKE_SOURCE_DIR}/xolotlCore/reactants/neclusters)
 include_directories(${CMAKE_SOURCE_DIR}/xolotlCore/advection)
 include_directories(${CMAKE_SOURCE_DIR}/xolotlCore/io)
+include_directories(${CMAKE_BINARY_DIR})
 
 #Add a library
 add_library(${LIBRARY_NAME} STATIC ${SRC})
